# RandomPointsInCircle

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
logic/: algorithm_management.cpp
ui/: mainwindow.cpp  mainwindow.h
utils/: basic_methods.cpp  helper_methods.cpp  mouse_management.cpp
